==> dj0abr/SX1262-Arduino-ESP32-driver/SX126x.cpp <==
#include "Arduino.h"
#include <SPI.h>
#include <algorithm>
#include "SX126x.h"
    #define MOSI 10
    #define MISO 11
    #define SCK 9
    #define MOSI 23
    #define MISO 19
    #define SCK 18

int16_t SX126x::LoRaConfig(uint8_t spreadingFactor, uint8_t bandwidth, uint8_t codingRate, uint16_t preambleLength, bool crcOn, bool invertIQ) 
{
    uint8_t ldro = 0; //LowDataRateOptimize

    if (!SetStopRxTimerOnPreambleDetect(false))       return -1;
    if (!SetLoRaSymbNumTimeout(0))                    return -2;
    if (!SetPacketType(SX126X_PACKET_TYPE_LORA))      return -3;
    if (!SetModulationParams(spreadingFactor, bandwidth, codingRate, ldro)) return -4;

    PacketParams[0] = (preambleLength >> 8) & 0xFF;
    PacketParams[1] = preambleLength;
    PacketParams[2] = 0x00;
    PacketParams[3] = 0xFF;
    PacketParams[4] = crcOn    ? 0x01 : 0x00;
    PacketParams[5] = invertIQ ? 0x01 : 0x00;

    if (!SPIwriteCommand(SX126X_CMD_SET_PACKET_PARAMS, PacketParams, 6, true)) return -5;

    // enable all IRQs, on DIO1: RX_DONE, TX_DONE, TIMEOUT
    if (!SetDioIrqParams(
            SX126X_IRQ_ALL,
            (SX126X_IRQ_RX_DONE | SX126X_IRQ_TX_DONE | SX126X_IRQ_TIMEOUT),
            SX126X_IRQ_NONE,
            SX126X_IRQ_NONE
        )) return -6;

    // start receiving (no timeout)
    if (!SetRx(0xFFFFFF)) return -7;

    return 0;
}

bool SX126x::Reset(void)
{
    delay(10);
    digitalWrite(SX126x_RESET, LOW);
    delay(20);
    digitalWrite(SX126x_RESET, HIGH);
    delay(10);

    // switch LoRa Module to RX
    setRfSwitchPins(false,false);

    // After reset, wait for Busy-LOW (with timeout)
    if (!waitWhileBusy(100)) {
        #ifdef DEBUG
        Serial.println("Reset: Timeout – SX126x_BUSY remains HIGH!");
        #endif
        return false;
    }
    return true;
}

bool SX126x::SetDio3AsTcxoCtrl(uint8_t tcxoVoltage, uint32_t timeout)
{
    if(hasTCXO >= 0) {
        uint8_t buf[4];
        buf[0] = tcxoVoltage & 0x07;
        buf[1] = (uint8_t)((timeout >> 16) & 0xFF);
        buf[2] = (uint8_t)((timeout >> 8) & 0xFF);
        buf[3] = (uint8_t)(timeout & 0xFF);

        if (!SPIwriteCommand(SX126X_CMD_SET_DIO3_AS_TCXO_CTRL, buf, 4, true)) {
            #ifdef DEBUG
            Serial.println("SetDio3AsTcxoCtrl: SPIwriteCommand failed!");
            #endif
            return false;
        }
    }
    return true;
}

bool SX126x::CalibrateImage(uint32_t frequency)
{
    uint8_t calFreq[2] = {0x00, 0x00};

    if (frequency > 900000000) {
        calFreq[0] = 0xE1;
        calFreq[1] = 0xE9;
    } else if (frequency > 850000000) {
        calFreq[0] = 0xD7;
        calFreq[1] = 0xD8;
    } else if (frequency > 770000000) {
        calFreq[0] = 0xC1;
        calFreq[1] = 0xC5;
    } else if (frequency > 460000000) {
        calFreq[0] = 0x75;
        calFreq[1] = 0x81;
    } else if (frequency > 425000000) {
        calFreq[0] = 0x6B;
        calFreq[1] = 0x6F;
    } else {
        #ifdef DEBUG
        Serial.println("CalibrateImage: Invalid frequency range!");
        #endif
        return false;
    }

    if (!SPIwriteCommand(SX126X_CMD_CALIBRATE_IMAGE, calFreq, 2, true)) {
        #ifdef DEBUG
        Serial.println("CalibrateImage: SPIwriteCommand failed!");
        #endif
        return false;
    }
    return true;
}

bool SX126x::SetOvercurrentProtection(uint8_t value)
{
    uint8_t buf[3];
    buf[0] = (uint8_t)((SX126X_REG_OCP_CONFIGURATION >> 8) & 0xFF); // MSB
    buf[1] = (uint8_t)(SX126X_REG_OCP_CONFIGURATION & 0xFF);        // LSB
    buf[2] = value;

    if (!SPIwriteCommand(SX126X_CMD_WRITE_REGISTER, buf, 3, true)) {
        #ifdef DEBUG
        Serial.println("SetOvercurrentProtection: SPIwriteCommand failed!");
        #endif
        return false;
    }
    return true;
}

bool SX126x::SetStopRxTimerOnPreambleDetect(bool enable)
{
    uint8_t data = static_cast<uint8_t>(enable);
    if (!SPIwriteCommand(SX126X_CMD_STOP_TIMER_ON_PREAMBLE, &data, 1, true)) {
        #ifdef DEBUG
        Serial.println("SetStopRxTimerOnPreambleDetect: SPIwriteCommand failed!");
        #endif
        return false;
    }
    return true;
}

bool SX126x::SetRx(uint32_t timeout)
{
    // switch LoRa Module to RX
    setRfSwitchPins(true,false);

    uint8_t buf[3];
    buf[0] = (uint8_t)((timeout >> 16) & 0xFF);
    buf[1] = (uint8_t)((timeout >> 8) & 0xFF);
    buf[2] = (uint8_t)(timeout & 0xFF);

    if (!SPIwriteCommand(SX126X_CMD_SET_RX, buf, 3, true)) {
        #ifdef DEBUG
        Serial.println("SetRx: SPIwriteCommand failed!");
        #endif
        return false;
    }
    return true;
}

bool SX126x::SetTx(uint32_t timeoutInMs)
{
    SetDio2AsRfSwitchCtrl(true);
    // switch LoRa Module to TX
    
    // Switch to standby RC
    if (!SetStandby(SX126X_STANDBY_RC)) {
        #ifdef DEBUG
        Serial.println("SetTx: Error switching to standby!");
        #endif
        return false;
    }
    setRfSwitchPins(false,true);

    uint8_t buf[3];
    uint32_t tout = timeoutInMs;
    if (timeoutInMs != 0) {
        // Convert timeout to "SX126x ticks": Timeout [ticks] = Timeout_in_us / 15.625
        uint32_t timeoutInUs = timeoutInMs * 1000;
        tout = (uint32_t)(timeoutInUs / 15.625);
    }

    buf[0] = (uint8_t)((tout >> 16) & 0xFF);
    buf[1] = (uint8_t)((tout >> 8) & 0xFF);
    buf[2] = (uint8_t)(tout & 0xFF);

    // Send command
    if (!SPIwriteCommand(SX126X_CMD_SET_TX, buf, 3, true)) {
        #ifdef DEBUG
        Serial.println("SetTx: SPIwriteCommand failed!");
        #endif
        return false;
    }

    // Wait for TX_WAIT status (max. 10ms)
    for (int retry = 0; retry < 10; retry++) {
        if ((GetStatus() & 0x70) == 0x60) return true; // TX_WAIT
        delay(1);
    }

    // Final status check, debug output on error
    uint8_t s = GetStatus();
    if ((s & 0x70) != 0x60) {
        #ifdef DEBUG
        Serial.print("SetTx: Illegal status (should be TX_WAIT, 0x60) but is: 0x");
        Serial.println(s, HEX);
        #endif
        return false;
    }
    return true;
}

uint8_t SX126x::ReadBuffer(uint8_t *rxData, uint8_t *rxDataLen, uint8_t maxLen)
{
    uint8_t offset = 0;

    // Get status & offset of RX buffer
    GetRxBufferStatus(rxDataLen, &offset);

    // Check buffer overflow
    if (*rxDataLen > maxLen) {
        #ifdef DEBUG
        Serial.println("ReadBuffer: Received data too long for the buffer!");
        #endif
        return 1;
    }

    // Wait for Busy before transfer
    if (!waitWhileBusy(50)) {
        #ifdef DEBUG
        Serial.println("ReadBuffer: Timeout before SPI transfer.");
        #endif
        return 2;
    }

    // Start SPI transfer
    digitalWrite(SX126x_SPI_SELECT, LOW);
    SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));

    // Command sequence according to SX126x datasheet
    SPI.transfer(SX126X_CMD_READ_BUFFER);
    SPI.transfer(offset);            // Start position in RX buffer
    SPI.transfer(SX126X_CMD_NOP);    // Dummy byte (status)

    // Read data
    for (uint16_t i = 0; i < *rxDataLen; i++) {
        rxData[i] = SPI.transfer(SX126X_CMD_NOP);
    }

    // End SPI transfer
    SPI.endTransaction();
    digitalWrite(SX126x_SPI_SELECT, HIGH);

    // Wait for Busy after transfer
    if (!waitWhileBusy(50)) {
        #ifdef DEBUG
        Serial.println("ReadBuffer: Timeout after SPI transfer.");
        #endif
        return 2;
    }

    return 0;
}

uint8_t SX126x::WriteBuffer(uint8_t *txData, uint8_t txDataLen)
{
    // Wait for Busy before transfer
    if (!waitWhileBusy(50)) {
        #ifdef DEBUG
        Serial.println("WriteBuffer: Timeout before SPI transfer.");
        #endif
        return 1;
    }

    // Start SPI transfer
    digitalWrite(SX126x_SPI_SELECT, LOW);
    SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));

    // Command byte and FIFO offset (always 0)
    SPI.transfer(SX126X_CMD_WRITE_BUFFER);
    SPI.transfer(0); 

    // Transfer payload
    for (uint16_t i = 0; i < txDataLen; i++) {
        SPI.transfer(txData[i]);
    }

    // End SPI transfer
    SPI.endTransaction();
    digitalWrite(SX126x_SPI_SELECT, HIGH);

    // Wait for Busy after transfer
    if (!waitWhileBusy(50)) {
        #ifdef DEBUG
        Serial.println("WriteBuffer: Timeout after SPI transfer.");
        #endif
        return 1;
    }

    return 0;
}

bool SX126x::SPItransfer(uint8_t cmd, bool write, uint8_t* dataOut, uint8_t* dataIn, uint8_t numBytes, bool waitForBusy) {
    // Wait for BUSY LOW (before transfer)
    if (!waitWhileBusy(50)) {
        #ifdef DEBUG
        Serial.println("SPIreadCommand: Aborted because BUSY too long HIGH.");
        #endif
        return false;
    }

    // Start SPI transfer
    digitalWrite(SX126x_SPI_SELECT, LOW);
    SPI.beginTransaction(SPISettings(2000000, MSBFIRST, SPI_MODE0));

    // Send command
    SPI.transfer(cmd);

    // Transfer data
    if (write) {
        for (uint8_t n = 0; n < numBytes; n++) {
            SPI.transfer(dataOut[n]);
        }
    } else {
        // On read: first dummy byte (status)
        SPI.transfer(SX126X_CMD_NOP);
        for (uint8_t n = 0; n < numBytes; n++) {
            dataIn[n] = SPI.transfer(SX126X_CMD_NOP);
        }
    }

    // End SPI transfer
    SPI.endTransaction();
    digitalWrite(SX126x_SPI_SELECT, HIGH);

    // Optional: Wait for BUSY LOW after transfer
    if (waitForBusy) {
        delayMicroseconds(1);
        // Wait for BUSY LOW (after transfer)
        if (!waitWhileBusy(50)) {
            #ifdef DEBUG
            Serial.println("SPIreadCommand: Aborted because BUSY too long HIGH.");
            #endif
            return false;
        }
    }
    return true;
}
